ci/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: AppName-Service # Change me
  namespace: ProjectNamespace # Change me
  labels:
    app: AppName # Change me
spec:
  type: ClusterIP
  ports:
    - name: puclic-api
      port: 8081
      targetPort: 8081
    - name: protected-api
      port: 8080
      targetPort: 8080
    - name: hidden-api
      port: 8079
      targetPort: 8079
  selector:
    app: AppName # Change me
